# risc0-lean4

./: .gitignore  Cirgen.lean  Elf.lean  HelloWorld.lean  LICENSE  Main.lean  R0sy.lean  README.md  RiscV.lean  Zkvm.lean  ZkvmVerify.lean  cirgen.lean  lake-manifest.json  lakefile.lean  lean-toolchain
.github/workflows/: ci.yml
Cirgen/Compiler/IR/: Interpreter.lean  Ops.lean  Types.lean
Elf/: Elf.lean  Header.lean  Main.lean  Program.lean  Section.lean  Types.lean
R0sy/: Algebra.lean  ByteDeserial.lean  Hash.lean  Serial.lean  Sha2.lean
R0sy/Algebra/: Field.lean  Ntt.lean  Poly.lean
R0sy/Algebra/Field/: BabyBear.lean  BabyBear2.lean  Goldilocks.lean
R0sy/Data/: Bits.lean  Hex.lean
R0sy/Ext/: ByteArray.lean  Nat.lean  Subarray.lean  UInt32.lean
R0sy/Hash/: Sha2.lean
R0sy/Lean/: ByteArray.lean  Nat.lean  Subarray.lean  UInt32.lean  UInt64.lean
R0sy/Test/: Hash.lean
RiscV/: Bits.lean  Config.lean  Elf.lean  Encoded.lean  Exception.lean  ISA.lean  Instruction.lean  Int.lean  Main.lean  Mem.lean  Memory.lean  Monad.lean  Opcode.lean  RV32IM.lean  Reg.lean  Register.lean  XlenInt.lean
RiscV/Instr/: ISA.lean  InstrRV32I.lean  InstrRV32M.lean  RV32I.lean  RV32IM.lean  RV32M.lean  Sets.lean  Types.lean
RiscV/Mach/: Exception.lean  Int.lean  Mem.lean  Reg.lean  XlenInt.lean
Soundness/: Fri.lean  Merkle.lean  ProofSystem.lean
Zkvm/: ArithVM.lean  Circuit.lean  Constants.lean  Main.lean  MainEmu.lean  MainVerify.lean  MethodId.lean  Taps.lean  VM.lean  Verify.lean
Zkvm/Algebra/: BabyBear.lean  Classes.lean  Ntt.lean
Zkvm/ArithVM/: AST.lean  Circuit.lean  Taps.lean
Zkvm/Circuit/: Riscv.lean  Taps.lean
Zkvm/Platform/: Elf.lean  Mem.lean
Zkvm/Seal/: CheckCommitments.lean  ComboCommitments.lean  Fri.lean  Header.lean  TraceCommitments.lean
Zkvm/Test/: HelloWorld.lean
Zkvm/Verify/: Adapter.lean  Classes.lean  Error.lean  Fri.lean  Hal.lean  Merkle.lean  Monad.lean  ReadIop.lean
ZkvmVerify/: Algebra.lean  Sha2.lean
ZkvmVerify/Algebra/: Field.lean  Poly.lean
ZkvmVerify/Algebra/Field/: BabyBear.lean  Goldilocks.lean
cirgen/compiler/IR/: Ops.lean  Types.lean
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/appendix/: faq.rst
docs/source/intro/: at-a-glance.rst
docs/source/stack/: babybear.rst  circuit.rst  fri.rst  merkle.rst  plookup.rst  receipt-verify.rst  riscv.rst  rng.rst  sha2.rst
rust/: Cargo.toml  README.md  rustfmt.toml
rust/circuit/: Cargo.toml
rust/circuit/src/: disk.rs  main.rs
rust/hello_world/: Cargo.toml  README.md
rust/hello_world/guard/: Cargo.toml  build.rs
rust/hello_world/guard/guest/: Cargo.toml
rust/hello_world/src/: disk.rs  lean.rs  main.rs
rust/hw/: Cargo.toml
rust/hw/guard/: Cargo.toml
rust/hw/guard/guest/: Cargo.toml
rust/hw/src/: disk.rs  lean.rs  main.rs
rust/output/: circuit.tapset  hello_world.id  hello_world.journal  hello_world.seal  hw.id  hw.journal  hw.seal  riscv.circuit
