[workspace]
members = [
  "circuit",
  "hello_world",
  "hw",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
snafu = { version = "0.7", default-features = false }

[workspace.dependencies.risc0-circuit-rv32im]
version = "1.0.0-rc.2"
git = "ssh://git@github.com/risc0/risc0.git"

[workspace.dependencies.risc0-build]
version = "1.0.0-rc.2"
git = "ssh://git@github.com/risc0/risc0.git"

[workspace.dependencies.risc0-zkvm]
version = "1.0.0-rc.2"
git = "ssh://git@github.com/risc0/risc0.git"
default-features = false

[workspace.dependencies.risc0-zkp]
version = "1.0.0-rc.2"
git = "ssh://git@github.com/risc0/risc0.git"
default-features = false

[profile.dev]
opt-level = 3
